catkin_ws/logs/backend/build.make.562.log.stderr
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/SURF.cpp: In member function ‘virtual bool SLAM::SURF::match(const std::vector<cv::KeyPoint>&, const cv::Mat&, const std::vector<cv::KeyPoint>&, const cv::Mat&, std::vector<cv::DMatch>&) const’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/SURF.cpp:66:40: error: ‘endl’ was not declared in this scope
  std::cout << " finished matching " << endl; 
                                        ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/SURF.cpp:66:40: note: suggested alternative:
In file included from /usr/include/c++/4.8/iostream:39:0,
                 from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/SURF.cpp:8:
/usr/include/c++/4.8/ostream:564:5: note:   ‘std::endl’
     endl(basic_ostream<_CharT, _Traits>& __os)
     ^
make[2]: *** [CMakeFiles/frontend.dir/src/SURF.cpp.o] Error 1
make[1]: *** [CMakeFiles/frontend.dir/all] Error 2
make: *** [all] Error 2
